# GlyphAudit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ai-summary.md  cli.md  concepts.md  configuration.md
src/GlyphAudit/: __init__.py  __main__.py  cli.py  comparator.py  defaults.py  instances.py  loaders.py  model.py  report.py
src/GlyphAudit/ai/: __init__.py  config.py  prompts.py  providers.py  summary.py
src/GlyphAudit/examples/: config.toml.example
src/GlyphAudit/prompts/: health_check.md
