[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "GlyphAudit"
version         = "0.1.0"
description     = "Tiered coverage and width comparison between a working font and one or more reference fonts."
readme          = "README.md"
requires-python = ">=3.9"
license         = { file = "LICENSE" }
authors         = [{ name = "Agyei Archer" }]
keywords        = ["fonts", "typography", "opentype", "glyphs", "fontmake"]
classifiers     = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Text Processing :: Fonts",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "fontTools>=4.40",
    "tomli>=1.2; python_version < '3.11'",
]

[project.optional-dependencies]
glyphs = ["glyphsLib>=6.0"]
claude = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.5"]
ai     = ["anthropic>=0.30", "openai>=1.0", "google-generativeai>=0.5"]
all    = [
    "glyphsLib>=6.0",
    "anthropic>=0.30",
    "openai>=1.0",
    "google-generativeai>=0.5",
]

[project.scripts]
glyph-audit = "GlyphAudit.cli:main"

[project.urls]
Homepage = "https://github.com/agyeiagyeiagyei/GlyphAudit"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where   = ["src"]
include = ["GlyphAudit*"]

[tool.setuptools.package-data]
GlyphAudit = [
    "prompts/*.md",
    "examples/*.example",
    "examples/*.toml",
]
